--- a/Views/Pages/设备管理页面/设备信息添加页面.xaml
+++ b/Views/Pages/设备管理页面/设备信息添加页面.xaml
@@ -1,14 +1,246 @@
-﻿<Page x:Class="InventoryManagementSystem.Views.Pages.设备管理页面.设备信息添加页面"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:InventoryManagementSystem.Views.Pages.设备管理页面"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="设备信息添加页面">
+﻿<Window
+    x:Class="InventoryManagementSystem.Views.Pages.设备管理页面.设备信息添加页面"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:InventoryManagementSystem.Views.Pages.设备管理页面"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="设备信息添加页面"
+    Width="800"
+    Height="600"
+    ResizeMode="NoResize"
+    WindowStyle="None"
+    mc:Ignorable="d">
 
-    <Grid>
-        
+    <Grid Margin="0,0,0,1">
+        <Grid
+            Width="222"
+            Margin="48,62,0,497"
+            HorizontalAlignment="Left">
+            <Label Margin="0,7,160,8" Content="设备名称" />
+            <ui:TextBox
+                Name="设备名称_TextBox"
+                Margin="114,0,0,0"
+                TextChanged="设备名称_TextBox_TextChanged"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="222"
+            Margin="48,311,0,248"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="总功率*" />
+            <ui:TextBox
+                Name="总功率_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="222"
+            Margin="48,271,0,288"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="净残率*" />
+            <ui:TextBox
+                Name="净残率_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid Margin="48,231,0,328" HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="设备价格*" />
+            <ui:TextBox
+                Name="设备价格_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid Margin="48,191,0,368" HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Right"
+                Content="使用部门*" />
+            <ui:TextBox
+                Name="使用部门_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="222"
+            Margin="48,150,0,408"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="生产厂商" />
+            <ui:TextBox
+                Name="生产厂商_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="222"
+            Margin="48,102,0,449"
+            HorizontalAlignment="Left">
+            <Label Margin="0,7,144,8" Content="资产负责人" />
+            <ui:TextBox
+                Name="资产负责人_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="223"
+            Margin="293,62,0,497"
+            HorizontalAlignment="Left">
+            <Label Margin="0,7,160,8" Content="规格型号" />
+            <ui:TextBox
+                Name="规格型号_TextBox"
+                Margin="115,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="223"
+            Margin="293,311,0,248"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="操作人员*" />
+            <ui:TextBox
+                Name="操作人员_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="223"
+            Margin="293,271,0,288"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="折旧率*" />
+            <ui:TextBox
+                Name="折旧率_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="223"
+            Margin="293,231,0,328"
+            HorizontalAlignment="Left">
+
+            <Label
+                Margin="0,7,0,8"
+                HorizontalAlignment="Left"
+                Content="购买数量*" />
+            <ui:TextBox
+                Name="购买数量_TextBox"
+                Margin="115,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="223"
+            Margin="293,191,0,368"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="安装地点" />
+            <ui:TextBox
+                Name="安装地点_TextBox"
+                Margin="115,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="223"
+            Margin="293,150,0,408"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,7,160,8"
+                HorizontalAlignment="Left"
+                Content="经销商" />
+            <ui:TextBox
+                Name="经销商_TextBox"
+                Margin="114,0,0,0"
+                TextWrapping="Wrap" />
+        </Grid>
+        <Grid
+            Width="223"
+            Margin="293,102,0,439"
+            HorizontalAlignment="Left">
+            <Label
+                Margin="0,13,0,23"
+                HorizontalAlignment="Left"
+                Content="设备类别" />
+            <ComboBox
+                Name="设备类别_ComboBox"
+                Height="42"
+                Margin="115,6,0,0"
+                VerticalAlignment="Top"
+                IsEditable="True"
+                ItemsSource="{Binding EquipmentTypes}"
+                SelectionChanged="设备类别_ComboBox_SelectionChanged" />
+        </Grid>
+        <Grid
+            Width="246"
+            Margin="544,311,0,248"
+            HorizontalAlignment="Left">
+            <Label
+                Width="64"
+                Margin="0,7,0,8"
+                HorizontalAlignment="Left"
+                Content="设备标识" />
+            <ui:TextBox
+                Name="设备标识_TextBox"
+                Margin="84,0,0,0"
+                RenderTransformOrigin="0.5,0.5"
+                TextWrapping="Wrap">
+                <ui:TextBox.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform />
+                        <SkewTransform AngleY="-0.236" />
+                        <RotateTransform />
+                        <TranslateTransform Y="-0.163" />
+                    </TransformGroup>
+                </ui:TextBox.RenderTransform>
+            </ui:TextBox>
+        </Grid>
+        <Grid
+            Width="246"
+            Margin="544,271,0,293"
+            HorizontalAlignment="Left">
+            <Label
+                Width="81"
+                Margin="0,7,0,8"
+                HorizontalAlignment="Left"
+                Content="购置时间*" />
+            <DatePicker Name="购置时间_TextBox" Margin="81,0,0,0" />
+        </Grid>
+
+        <ui:TextBox
+            Name="备注_TextBox"
+            Width="678"
+            Margin="78,364,44,68"
+            TextWrapping="Wrap" />
+        <ui:Button
+            Name="提交设备信息_Button"
+            Width="76"
+            Margin="281,536,0,0"
+            VerticalAlignment="Top"
+            Content="提交" />
+        <ui:Button
+            Width="72"
+            Margin="404,536,0,0"
+            VerticalAlignment="Top"
+            Click="Button_Click"
+            Content="取消" />
+
     </Grid>
-</Page>
+
+</Window>
