--- a/Views/Pages/设备管理页面/设备信息管理.xaml
+++ b/Views/Pages/设备管理页面/设备信息管理.xaml
@@ -1,19 +1,218 @@
 ﻿<Page
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:InventoryManagementSystem.Views.Pages.设备管理页面"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="InventoryManagementSystem.Views.Pages.设备管理页面.设备信息管理"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="设备信息管理">
+    x:Class="InventoryManagementSystem.Views.Pages.设备管理页面.设备信息管理"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:InventoryManagementSystem.Views.Pages.设备管理页面"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    Title="设备信息管理"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
 
     <Grid>
+        <!--<ui:DataGrid Name="设备信息_DataGrid" Margin="0,66,0,0" />-->
+        <DataGrid
+            x:Name="设备信息_DataGrid"
+            Margin="0,70,0,0"
+            CellStyle="{DynamicResource DataGridCellStyle1}"
+            ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}"
+            RowStyle="{DynamicResource DataGridRowStyle1}"
+            Style="{DynamicResource DataGridStyle1}">
+            <DataGrid.Columns>
+                <DataGridCheckBoxColumn
+                    Width="auto"
+                    CanUserResize="False"
+                    ElementStyle="{StaticResource CheckBoxStyle1}"
+                    Header="C">
+                    <DataGridCheckBoxColumn.HeaderTemplate>
+                        <DataTemplate>
+                            <CheckBox Style="{StaticResource CheckBoxStyle1}" />
+                        </DataTemplate>
+                    </DataGridCheckBoxColumn.HeaderTemplate>
+                </DataGridCheckBoxColumn>
+                <DataGridTemplateColumn
+                    Width="auto"
+                    Header="Operations"
+                    IsReadOnly="True">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Button
+                                    Name="修改设备信息_Button"
+                                    Click="编辑设备信息_Button_Click"
+                                    Style="{StaticResource gridEditButton}">
+                                    <Icon:PackIconMaterial Kind="PencilOutline" Style="{StaticResource gridButtonIcon}" />
+                                </Button>
+                                <Button
+                                    Name="删除设备信息_Button"
+                                    Margin="5,0,0,0"
+                                    Click="删除设备信息_Button_Click"
+                                    Style="{StaticResource gridRemoveButton}">
+                                    <Icon:PackIconMaterial Kind="DeleteOutline" Style="{StaticResource gridButtonIcon}" />
+                                </Button>
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding Id}"
+                    CanUserResize="False"
+                    Header="设备类型ID"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding DeviceCategoryId}"
+                    CanUserResize="False"
+                    Header="设备类型名称"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding Quantity}"
+                    CanUserResize="False"
+                    Header="备注"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding InstallationLocation}"
+                    CanUserResize="False"
+                    Header="备注"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding ResidualValueRate}"
+                    CanUserResize="False"
+                    Header="备注"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding UsingDepartmentId}"
+                    CanUserResize="False"
+                    Header="备注"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding DeviceNumber}"
+                    CanUserResize="False"
+                    Header="设备编号"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding DeviceName}"
+                    CanUserResize="False"
+                    Header="设备名称"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding Quantity}"
+                    CanUserResize="False"
+                    Header="数量"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding SpecificationModel}"
+                    CanUserResize="False"
+                    Header="规格型号"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding DeviceIdentifier}"
+                    CanUserResize="False"
+                    Header="设备标识"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding DeviceImage}"
+                    CanUserResize="False"
+                    Header="设备图片"
+                    IsReadOnly="True" />
 
-        <ui:AutoSuggestBox Margin="0,19,195,0" VerticalAlignment="Top"/>
-        <ui:Button Content="Button" Margin="687,19,0,0" VerticalAlignment="Top" Height="35"/>
-        <ui:DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,66,0,0"/>
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding Distributor}"
+                    CanUserResize="False"
+                    Header="经销商"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding AccumulatedDepreciationMonths}"
+                    CanUserResize="False"
+                    Header="折旧率"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding AssetManager}"
+                    CanUserResize="False"
+                    Header="资产负责人"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding Manufacturer}"
+                    CanUserResize="False"
+                    Header="生产厂商"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding NetValue}"
+                    CanUserResize="False"
+                    Header=" 净残率"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding Operator}"
+                    CanUserResize="False"
+                    Header="操作人员"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding PurchaseTime}"
+                    CanUserResize="False"
+                    Header="购置时间"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding TotalPower}"
+                    CanUserResize="False"
+                    Header="备注"
+                    IsReadOnly="True" />
+                <DataGridTextColumn
+                    Width="auto"
+                    Binding="{Binding Remarks}"
+                    CanUserResize="False"
+                    Header="总功率"
+                    IsReadOnly="True" />
+
+            </DataGrid.Columns>
+        </DataGrid>
+        <Border
+            Width="790"
+            Margin="0,19,0,0"
+            VerticalAlignment="Top">
+            <Grid>
+
+                <ui:AutoSuggestBox Margin="0,0,185,0" VerticalAlignment="Top" />
+                <ui:Button
+                    x:Name="添加设备信息_Button"
+                    Width="86"
+                    Height="35"
+                    Margin="614,0,0,0"
+                    VerticalAlignment="Top"
+                    Click="添加设备信息_Button_Click"
+                    Content="添加" />
+                <ui:Button
+                    x:Name="删除设备信息_Button"
+                    Width="81"
+                    Height="35"
+                    Margin="709,0,0,0"
+                    VerticalAlignment="Top"
+                    Click="删除设备信息_Button_Click"
+                    Content="删除" />
+
+            </Grid>
+        </Border>
 
     </Grid>
 </Page>
